article listing with topic wise completed

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
 PORT=3000
+DB_URL="mongodb+srv://shabinmkk3:J2JxzKueqULwVjfj@cluster0.6bf7u.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
